--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/offcanvas-navbar/">
     <meta name="robots" content="noindex">
     <meta http-equiv="refresh" content="0; url=https://getbootstrap.com/docs/5.3/examples/offcanvas-navbar/">
+    <img src="C:\Users\grsam\Downloads\Jelly.jpg alt="Jelly"
   </head>
 </html>
 
