--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>https://getbootstrap.com/docs/5.3/examples/offcanvas-navbar/</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/offcanvas-navbar/">
     <meta name="robots" content="noindex">
-    <meta http-equiv="refresh" content="0; url=https://getbootstrap.com/docs/5.3/examples/offcanvas-navbar/">
-    <img src="C:\Users\grsam\Downloads\Jelly.jpg alt="Jelly"
   </head>
+  <body>
+   <img src="pic_trulli.jpg" alt="Italian Trulli" style="display: block; margin: 0 auto;">
+   <iframe src="https://getbootstrap.com/docs/5.3/examples/offcanvas-navbar/" style="width: 100%; height: 80vh; border: none;"></iframe>
+  </body>
 </html>
-
