--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="noindex">
   </head>
   <body>
-   <img src="pic_trulli.jpg" alt="Italian Trulli" style="display: block; margin: 0 auto;">
+   <img src="https://samhithagunnam.github.io/Projectss/pic_trulli.jpg" alt="Italian Trulli" style="display: block; margin: 0 auto;">
    <iframe src="https://getbootstrap.com/docs/5.3/examples/offcanvas-navbar/" style="width: 100%; height: 80vh; border: none;"></iframe>
   </body>
 </html>
